mi-primer-proyecto/force-app/main/default/objects/Archivo_Medico__c/Archivo_Medico__c.object-meta.xml
<CustomObject>
    <label>Archivo Medico</label>
    <nameField>
        <displayFormat>ARM-{0000}</displayFormat>
        <label>ID Archivo Medico</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archivos Medicos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>