mi-primer-proyecto/force-app/main/default/objects/Archivo_Medico__c/fields/diagnostico__c.field-meta.xml
<CustomField>
    <fullName>diagnostico__c</fullName>
    <inlineHelpText>Detalle clínico asociado a la imagen.</inlineHelpText>
    <label>Diagnostico</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>