mi-primer-proyecto/force-app/main/default/objects/Archivo_Medico__c/fields/especialidad__c.field-meta.xml
<CustomField>
    <fullName>especialidad__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Especialidad asociada al estudio.</inlineHelpText>
    <label>Especialidad ID</label>
    <referenceTo>vita_especialidad__c</referenceTo>
    <relationshipLabel>Archivos Medicos</relationshipLabel>
    <relationshipName>Archivos_Medicos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>