mi-primer-proyecto/force-app/main/default/objects/Archivo_Medico__c/fields/Fecha_Hora__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Hora__c</fullName>
    <inlineHelpText>Ingresar fecha y hora que se capturó la imagen o el estudio.</inlineHelpText>
    <label>Fecha Hora</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>