mi-primer-proyecto/force-app/main/default/objects/Archivo_Medico__c/fields/paciente__c.field-meta.xml
<CustomField>
    <fullName>paciente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Paciente ID</label>
    <referenceTo>vita_paciente__c</referenceTo>
    <relationshipLabel>Archivos Medicos</relationshipLabel>
    <relationshipName>Archivos_Medicos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>