mi-primer-proyecto/force-app/main/default/objects/Archivo_Medico__c/fields/profesional__c.field-meta.xml
<CustomField>
    <fullName>profesional__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>El sistema solo mostrará los registros del objeto Profesional cuya Especialidad coincida con el valor que el usuario acaba de seleccionar en el campo Especialidad del Turno actual.</inlineHelpText>
    <label>Profesional ID</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El profesional seleccionado no pertenece a la especialidad elegida. Por favor, seleccione primero la especialidad.</errorMessage>
        <filterItems>
            <field>$Source.especialidad__c</field>
            <operation>equals</operation>
            <valueField>vita_profesional__c.especialidad__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vita_profesional__c</referenceTo>
    <relationshipLabel>Archivos Medicos</relationshipLabel>
    <relationshipName>Archivos_Medicos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>